samples/_failures_safe/1761265224_13f4dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba8e2d62.c: In function ‘main’:
./samples/SAFE/__tmp_ba8e2d62.c:142:16: error: missing terminating " character
  142 |         printf("3.
      |                ^~~
./samples/SAFE/__tmp_ba8e2d62.c:142:9: error: expected expression at end of input
  142 |         printf("3.
      |         ^~~~~~
./samples/SAFE/__tmp_ba8e2d62.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ba8e2d62.c:142:9: error: expected declaration or statement at end of input
